
Mon Jun 5 14:11:58 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kadmin5.c - Add support for specifiable credentials caches and
		ticket lifetimes.
	* network.c - Use new krb5_adm_connect() calling sequence.
	* kadmin5.h - Update prototypes and externals.
	* kadmin5.M - Update description to add -c -l -d and -s flags.


Thu Jun 1 14:31:49 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kadmin5.c: Change the default admin instance name to "kadmin"
	* kadmin5.c(kadmin_list): Compare principals to each of the supplied
		regular expressions instead of only to the last one.  This
		is slightly inefficient, but correct.
	* kadmin5.M: Document the change in default instance name.


Mon May 15 10:57:17 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kadmin5.M	- Change default principal name for kadmin5.


Fri May 12 16:04:01 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in	- Check for regex.h.
	* kadmin5.c	- Use regex.h only if present.  Correctly calculate
			  length of argument string to build when command is
			  on command line.


Thu May 11 12:18:27 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kadmin5.c	- Change "programname" to be the last component of
			  argv[0].  Also correctly terminate generated
			  argument string in kadmin_startup.


Tue May 9 15:56:40 EDT 1995	Paul Park	(pjpark@mit.edu)
	First checkin of new administrative client.
